src/app/views/jobs/jobs.component.scss
@import '../../styles/variables';
@import '../../styles/tooltips';

.jobs-header {
  background-color: $color-primary-cerise;
  padding: 1em 0;

  h3 {
    position: relative;
    top: 5px;
    color: $white;
  }
}

.map-container {
  .tooltip-top {
    width: 50%;
    height: 0;
    margin: 0 auto;

    span {
      cursor: pointer;
      min-width: 100%;

      &:before {
        border: none !important;
      }

      > div {
        width: 100%;
        text-align: center !important;
        color: $color-blue-200;
      }

      &:hover {
        > div {
          color: white;
        }
      }
    }
  }

  .map {
    height: 400px;
    width: 100%;
  }
}

.job-list-container {
  background-color: $default-bg-color;

  > div {
    width: 100%;
    cursor: pointer;
    cursor: hand;
  }
}

